--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </div>
 
   <!-- Sign-in pop-up -->
-  <div class="container" id="user-sign-in">
+  <div class="container" id="user-sign-in" style="display: none">
     <div class="modal-content">
       <div class="row">
         <div class="col s12">
@@ -326,8 +326,6 @@
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/sql.js"></script>
-  <script src="js/key-display.js"></script>
 
 </body>
 
