adding new file layout and fuctions

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
   <!-- Moment.js CDN-->
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+  <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.ico">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <!-- User sign in navigation. -->
@@ -35,17 +38,17 @@
     </a>
     <ul>
       <li>
-        <a href="#key-section" class="btn-floating purple lighten-4 key-item">
+        <a id="key-section-btn" href="#key-section" class="btn-floating purple lighten-4 key-item">
         <img class="key nav-button" src= "assets/images/key.png">
         </a>
       </li>
       <li>
-        <a href="#vacuum-section" class="btn-floating red lighten-4 vacuum-item">
+        <a id="vacuum-section-btn"href="#vacuum-section" class="btn-floating red lighten-4 vacuum-item">
           <img class="vacuum nav-button" src= "assets/images/vacuum.png">
         </a>
       </li>
       <li>
-        <a href="#ladder-section" class="btn-floating cyan lighten-4 ladder-item">
+        <a id="ladder-section-btn" href="#ladder-section" class="btn-floating cyan lighten-4 ladder-item">
           <img class="ladder nav-button" src= "assets/images/ladder.png">
         </a>
       </li>
@@ -325,7 +328,6 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
-  <script src="js/main.js"></script>
 
 </body>
 
